# energy_england

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
app/: api.py  requirements.txt  streamlit_app.py
data/raw/: demanddata_2020.csv  demanddata_2021.csv  demanddata_2022.csv  demanddata_2025.csv
docs/: ARCHITECTURE.md
docx/: Research_Proposal_UK_Electricity_Demand_Forecasting.docx
models/: feature_columns.json  lightgbm_regressor.pkl  linear_regression.pkl  metrics_summary.csv  metrics_summary.json
notebooks/: 01_pre_eda_and_cleaning.ipynb  02_eda.ipynb  02_eda_REVISED (1).ipynb  03_feature_engineering_and_selection.ipynb  03_feature_engineering_and_selection_REVISED (1).ipynb  04_model_training_and_evaluation.ipynb  04_model_training_and_evaluation_REVISED (3).ipynb
paper/: main.tex
scripts/: run_cleaning.py  run_features.py  run_pipeline.py  run_training.py
src/energyforecast/: __init__.py  cleaning.py  cli.py  config.py  features.py  forecast.py  metrics.py  models.py  pipeline.py  splits.py  train.py
tests/: test_api.py  test_cleaning.py  test_features.py  test_metrics.py
