[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "energyforecast"
version = "1.0.0"
description = "UK (England & Wales) National Grid electricity demand forecasting: cleaning, feature engineering, model training and a FastAPI forecasting service"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scikit-learn>=1.3",
    "scipy>=1.11",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "joblib>=1.3",
]

[project.optional-dependencies]
app = ["fastapi>=0.110", "uvicorn[standard]>=0.29", "streamlit>=1.30", "plotly>=5.18", "requests>=2.31"]
viz = ["matplotlib>=3.8", "seaborn>=0.13"]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.4", "httpx>=0.27"]

[project.scripts]
energyforecast-clean = "energyforecast.cli:clean_main"
energyforecast-features = "energyforecast.cli:features_main"
energyforecast-train = "energyforecast.cli:train_main"
energyforecast-pipeline = "energyforecast.cli:pipeline_main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
